apps/production/reflection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reflection
  namespace: reflection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reflection
  template:
    metadata:
      labels:
        app: reflection
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/master
                    operator: DoesNotExist
      containers:
        - name: reflection
          image: turtlez/reflection:main_20260518075510_6aac1e8b # {"$imagepolicy": "flux-system:reflection"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
