apps/production/reflection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reflection
  namespace: reflection
spec:
  selector:
    app: reflection
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
