apps/production/reflection/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: reflection
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reflection-http
  namespace: reflection
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`reflection.turtleware.au`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: reflection
          port: 3003
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reflection-https
  namespace: reflection
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`reflection.turtleware.au`)
      kind: Rule
      services:
        - name: reflection
          port: 3003
  tls:
    secretName: reflection-tls
